--- a/stats2/week0_activity3/Monte_Carlo_Simulation.ipynb
+++ b/stats2/week0_activity3/Monte_Carlo_Simulation.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Monte Carlo Simulation.ipynb",
+      "name": "Monte Carlo Simulation.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -38,7 +39,7 @@
       },
       "source": [
         "import numpy as np\n",
-        "from tqdm import tqdm   # this module prints a simple progress bar for the range function"
+        "from tqdm import tqdm   # this module prints a simple progress bar for the range function along with a time stamp"
       ],
       "execution_count": null,
       "outputs": []
@@ -327,6 +328,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ---------- END OF MY ACTIVITY ----------"
+      ],
+      "metadata": {
+        "id": "uyeSzSXo-e5P"
+      }
     },
     {
       "cell_type": "markdown",
