--- a/stats2/week0_activity3/Monte_Carlo_Simulation.ipynb
+++ b/stats2/week0_activity3/Monte_Carlo_Simulation.ipynb
@@ -333,6 +333,7 @@
       "cell_type": "markdown",
       "source": [
         "# ---------- END OF MY ACTIVITY ----------"
+        "Below this point is the exact same content as shared with us, and is not the part of Week 0: Activity 3."
       ],
       "metadata": {
         "id": "uyeSzSXo-e5P"
